--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -6,29 +6,68 @@ $grid-columns: 12;
 
 
 .container {
-    @media screen and (min-width:$screen-md){
+    @media screen and (max-width:$screen-smallPad){
+        @include outer-container(100%);
+        @include pad(5%);
+    }
+    @media screen and (min-width:$screen-smallPad) and (max-width:$screen-md){
+        
+    }
+    @media screen and (min-width:$screen-smallPad) and (max-width:$screen-lg){
+        @include outer-container(900px);
+    }
+    @media screen and (min-width:$screen-lg){
         @include outer-container(1024px);   
     }
-    @media screen and (max-width:$screen-xs){
-        @include outer-container(100%);   
-    }
+
     @extend %clearfix;
     
     body > header &{
-        @media screen and (min-width:$screen-md){
-            > nav{@include span-columns(7);}
-            > hgroup{@include span-columns(5);}
+        @media screen and (max-width:$screen-xs){
+            > hgroup, > nav{
+                @include fill-parent();
+                position: absolute;
+                left:0;
+                right: 0;
+            }
+            > hgroup{
+                top:40px;
+                z-index: 5;
+                .logo{
+                    margin-top:4px;
+                }
+            }
+            > nav {
+                top:0px;
+                z-index: 10;
+            }
+
         }
-        &.columns{
-            > div {@include span-columns(3);}
+        @media screen and (min-width:$screen-sm + 1) and (max-width:$screen-lg){
+            > nav{@include span-columns(7);}
+            > hgroup{
+                @include span-columns(5);
+            }
+        }
+        @media screen and (min-width:$screen-lg){
+            > nav{@include span-columns(7);}
+            > hgroup{
+                @include span-columns(5);
+            }
         }
     }
-    @media screen and (max-width:$screen-xs){
-        
+    body > header &,body > footer & {
+        &.columns{
+            @media screen and (min-width:$screen-md){
+            > div {@include span-columns(3);}
+            }
+        }
     }
 }
 .contact-buttons {
     @extend %clearfix;
+    @media screen and (min-width:$screen-md){
     margin-bottom:4.5 * $paragraph-margin;
     > div {@include span-columns(4);}
+    }
 }
