--- a/sass/content/_content.scss
+++ b/sass/content/_content.scss
@@ -1,14 +1,23 @@
 article{
-    .post_content{
-      padding-top: 6.6rem;
-      @include span-columns(6 of 12);
-      + aside{
-          @include span-columns(6 of 12);
-          margin:0;
-      }
+    @media screen and (max-width:$screen-xs){
+        > post_content, > aside{
+            @include fill-parent();
+        }
     }
+    @media screen and (min-width:$screen-xs) and (max-width:$screen-lg){
+        > post_content, > aside{
+            @include span-columns(6);
+        }
+    }
+
     body.home &{
-        h1 { margin:12vH 5em;}
+        @media screen and (max-width:$screen-xs){
+             h1 { margin:40vH 0 0 0;}
+        }
+        @media screen and (min-width:$screen-md){
+             h1 { margin:12vH 5em;}
+        }
+       
     }
     body.leistungen &{
         text-align: center;
@@ -41,12 +50,12 @@ article{
     }
 
     .flexslider & {
-        > section,> aside {
-            @include span-columns(6);
-
+        > section.flexcaption{
+            padding-right: 1.2em;
         }
-        > section{
-            padding-left: 1.2em;
+        > aside {
+            float:right;
+/*            margin-right: -1.2em;*/
         }
     }
 }
