--- a/sass/content/_media.scss
+++ b/sass/content/_media.scss
@@ -1,5 +1,8 @@
 .flexslider{
     border:0;
+    @media screen and (max-width:$screen-xs){
+        /*        height:calc(100vH - 198px);*/
+    }
 }
 .flex-control-nav{
     bottom:1em;
@@ -23,8 +26,13 @@
 
         }
         &.flex-prev{
-            .single & {left:0;}
-            [class*="subpages"] & {left:calc(50% + 24px) !important;}
+            top:50%;
+            bottom:auto;
+            @media screen and (min-width:$screen-md){
+                .single & {left:0;}
+                [class*="subpages"] & {left:calc(50% + 24px) !important;}   
+            }
+
         }
         &.flex-prev:before{
             @include rotate(180deg);
@@ -52,15 +60,25 @@
 }
 
 /**** Portfolio ****/
+
 #portfolio{
-    margin:0 -1%;
+    @media screen and (min-width:$screen-md){
+        margin:0 -1%;
+    }
+
 }
 .portfolio-item{
     position: relative;
-    float:left;
-    width: 23%;
-    margin:1%;
     overflow: hidden;
+    @media screen and (max-width:$screen-xs){
+        margin-bottom:1em;
+    }
+    @media screen and (min-width:$screen-md){
+        float:left;
+        width: 23%;
+         margin:1%;
+    }
+
     > [class*="portfolio_"]{
         position:absolute;
         top:0;
@@ -73,8 +91,14 @@
         *{color:white !important;}
         text-align: center;
         padding:2em;
-        left:-100%;
-        right:100%;
+        @media screen and (max-width:$screen-xs){
+            top:100%;
+            bottom:-100%;
+        }
+        @media screen and (min-width:$screen-md){
+            left:-100%;
+            right:100%;
+        }
         z-index:99;
         h2 {@include ellipsis(100%);}
         svg {
@@ -92,19 +116,27 @@
     &:hover{
         overflow:visible;
         > .portfolio_content{
-            left:100%;
-            right:calc(-109%);
+            @media screen and (min-width:$screen-md){
+                left:100%;
+                right:calc(-109%);
+            }
+            @media screen and (max-width:$screen-xs){
+/*                top:100%;
+                bottom:0;*/
+            }
             z-index: 999;
         }
         > .portfolio_thumbnail{
             padding:5px;
         }
     }
-    &:nth-child(4n):hover{
-        .portfolio_content{
-            left:-109%;
-            right:100%;
+    @media screen and (min-width:$screen-md){
+        &:nth-child(4n):hover{
+            .portfolio_content{
+                left:-109%;
+                right:100%;
+            }
         }
     }
-    
+
 }
