--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -11,8 +11,8 @@
 @import "base/_grid";
 
 @import "base/_globals";
-@import "content/_layout";
 @import "content/_navigation";
-@import "content/_content";
+@import "content/_layout";
+/*@import "content/_content";
 @import "content/_media";
-@import "_shame.scss";
+@import "_shame.scss";*/
