--- a/sass/utils/_icons.scss
+++ b/sass/utils/_icons.scss
@@ -31,6 +31,9 @@
     #pfeil-xs &{
         fill:$primary-color;
     }
+    #header nav #pfeil-xs & {
+       fill:$base-color-grey;
+    }
 }
 .st0{
    fill:$base-color-grey; 
