--- a/css/screen.css
+++ b/css/screen.css
@@ -12,6 +12,11 @@ html {
 .container:after, .contact-buttons:after, #header nav ul:after {
   clear: both; }
 
+.post-edit-link > span {
+  text-indent: -9999px;
+  display: block;
+  overflow: hidden; }
+
 /*** Mixins & Placeholders ***/
 /**** caret ****/
 /* Bsp. @include alpha-background-color(rgba(black, 0.35), white); */
@@ -182,13 +187,16 @@ p {
     text-transform: uppercase;
     font-weight: bold !important;
     line-height: 1;
-    margin-bottom: 0; }
+    margin-bottom: 0;
+    color: #fff; }
     @media screen and (max-width: 480px) {
       body.home > footer p {
         font-size: 14px; } }
     @media screen and (min-width: 992px) {
       body.home > footer p {
         font-size: 24px; } }
+  body:not(.home) > footer p {
+    padding: 1em 0; }
   body.leistungen > main p {
     text-align: center; }
 
@@ -293,6 +301,8 @@ table {
 
 #pfeil-xs .dots {
   fill: #6D3332; }
+#header nav #pfeil-xs .dots {
+  fill: #A6ABAE; }
 
 .st0 {
   fill: #A6ABAE; }
@@ -325,7 +335,7 @@ table {
   body > header .container hgroup {
     top: 41px;
     z-index: 5;
-    height: 150px; }
+    height: 120px; }
     body > header .container hgroup .logo {
       margin-top: 4px; }
   body > header .container nav {
@@ -395,6 +405,9 @@ table {
   .hidden-lg {
     display: none; } }
 
+*:hover, *:focus {
+  cursor: pointer; }
+
 #header nav {
   text-transform: uppercase;
   font-size: 1.125rem;
@@ -417,6 +430,30 @@ table {
         display: block;
         float: none;
         line-height: 100% !important; }
+        #header nav ul li.close-menu {
+          text-align: center;
+          height: 44px; }
+          #header nav ul li.close-menu a {
+            text-indent: -99999px;
+            overflow: hidden;
+            width: 100%;
+            height: 0; }
+          #header nav ul li.close-menu svg {
+            margin: 0 !important;
+            height: 22px !important;
+            padding: 0;
+            -webkit-transform: rotate(-180deg);
+            -moz-transform: rotate(-180deg);
+            -ms-transform: rotate(-180deg);
+            -o-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+            -webkit-transform-origin: center center;
+            -moz-transform-origin: center center;
+            -ms-transform-origin: center center;
+            -o-transform-origin: center center;
+            transform-origin: center center; }
+            #header nav ul li.close-menu svg:hover {
+              cursor: pointer; }
         #header nav ul li a {
           padding: .5em 1em; }
         #header nav ul li svg {
@@ -428,7 +465,9 @@ table {
       #header nav ul li {
         float: left;
         display: inline-block;
-        width: auto; } }
+        width: auto; }
+        #header nav ul li.close-menu {
+          display: none; } }
   #header nav li.menu-item a {
     display: block;
     color: #52595F;
@@ -462,7 +501,7 @@ nav.nav.open {
   -webkit-transition: all 0.15s ease-out 0s;
   -moz-transition: all 0.15s ease-out 0s;
   transition: all 0.15s ease-out 0s;
-  min-height: 300px; }
+  min-height: 340px; }
 
 @media screen and (max-width: 480px) {
   nav.nav, nav.nav.closed {
@@ -506,10 +545,11 @@ html {
       background: #6D3332; } }
 
 body.home {
-  /*        height:100vH;*/
+  height: 100vH;
+  position: relative;
+  overflow: hidden;
   background-color: black;
-  background-repeat: no-repeat;
-  margin-bottom: 87px; }
+  background-repeat: no-repeat; }
   @media screen and (max-width: 480px) {
     body.home {
       background-size: contain;
@@ -517,7 +557,8 @@ body.home {
   @media screen and (min-width: 992px) {
     body.home {
       background-size: cover;
-      background-position: 50% 25%; } }
+      background-position: 50% 25%;
+      margin-bottom: 87px; } }
   body.home > footer {
     height: 87px; }
 body:not(.kontakt) {
@@ -531,15 +572,36 @@ body:not(.home) > main {
   background: white; }
   @media screen and (max-width: 480px) {
     body:not(.home) > main {
-      margin-top: 198px; } }
+      margin-top: 160px; }
+      body:not(.home) > main .post_content {
+        padding: 1em 2em; } }
 @media screen and (min-width: 992px) {
   body:not(.home) > header {
     background: white; } }
 body:not(.home) > header .logo {
   background: white; }
+body:not(.home) > footer {
+  background: #6D3332; }
+  @media screen and (min-width: 992px) {
+    body:not(.home) > footer {
+      padding-top: 40px; } }
+  body:not(.home) > footer * {
+    color: #fff; }
+  @media screen and (max-width: 480px) {
+    body:not(.home) > footer {
+      padding: 0 2em; } }
 
-#header .container, .container#portfolio {
+#header .container {
   padding: 0; }
+@media screen and (max-width: 480px) {
+  .container #portfolio {
+    padding: 0 2em; } }
+@media screen and (min-width: 992px) {
+  .container #portfolio {
+    padding: 0; } }
+  @media screen and (min-width: 992px) and (min-width: 992px) {
+    .container #portfolio > div {
+      padding: 0; } }
 
 @media screen and (max-width: 480px) {
   #header {
@@ -596,8 +658,261 @@ body:not(.home) > header .logo {
       letter-spacing: .01em;
       width: 375px; } }
 
-/*@import "content/_content";
-@import "content/_media";
-@import "_shame.scss";*/
+article {
+  /*    &.category-portfolio{
+          @include display(flex);
+          @include flex-direction(row);
+          @include align-items(flex-end);
+          > .post_content {
+              @include flex-basis(40%);
+          }
+          > aside {
+             @include flex-basis(60%); 
+          }
+      }*/ }
+  @media screen and (max-width: 480px) {
+    article > .post_content, article > aside {
+      width: 100%; } }
+  @media screen and (min-width: 769px) {
+    body:not(.single) article > .post_content, body:not(.single) article > aside {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%; }
+      body:not(.single) article > .post_content:last-child, body:not(.single) article > aside:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 769px) {
+    body.single article > .post_content {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 40.29137%; }
+      body.single article > .post_content:last-child {
+        margin-right: 0; } }
+  @media screen and (max-width: 480px) {
+    article > aside {
+      height: 50vH;
+      overflow: hidden; } }
+  @media screen and (min-width: 769px) {
+    body.single article > aside {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 57.35098%; }
+      body.single article > aside:last-child {
+        margin-right: 0; }
+    body.page article > aside, body.single article > aside {
+      float: right; } }
+@media screen and (orientation: portrait) and (max-width: 480px) {
+  body.home article h1 {
+    margin: 40vH 0 0 0; } }
+@media screen and (orientation: portrait) and (min-width: 480px) and (max-width: 1024px) {
+  body.home article h1 {
+    margin: 6vH 3em; } }
+@media screen and (orientation: portrait) and (min-width: 1025px) {
+  body.home article h1 {
+    margin: 12vH 5em; } }
+
+  body.leistungen article {
+    text-align: center; }
+    @media screen and (max-width: 480px) {
+      body.leistungen article {
+        width: 100%;
+        padding-top: 20px; } }
+    @media screen and (min-width: 992px) {
+      body.leistungen article {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 48.82117%; }
+        body.leistungen article:last-child {
+          margin-right: 0; } }
+    body.leistungen article .thumbnail {
+      background: transparent;
+      border: 0;
+      display: block;
+      margin-bottom: 1em; }
+      body.leistungen article .thumbnail img {
+        width: auto;
+        height: 75px;
+        max-width: none; }
+    @media screen and (min-width: 992px) {
+      body.leistungen article:nth-child(even) {
+        padding-left: 3em;
+        margin: 0; }
+      body.leistungen article:nth-child(odd) {
+        padding-right: 3em; }
+      body.leistungen article:last-child {
+        width: 100%;
+        float: none;
+        clear: both;
+        width: 100%;
+        padding: 0; } }
+  .flexslider article > section.flexcaption {
+    padding-right: 1.2em; }
+
+.contact-map .iframe-elastic iframe {
+  pointer-events: none; }
+
+.contact-buttons {
+  text-align: center; }
+  .contact-buttons .icon {
+    max-width: 128px;
+    max-height: 128px;
+    margin-bottom: 1em; }
+  .contact-buttons p > strong {
+    text-transform: uppercase;
+    color: #6D3332; }
+
+.post-edit-link {
+  background: transparent url(../svg/pen.svg) no-repeat left center;
+  display: block;
+  height: 20px;
+  width: 20px; }
+
+.flexslider {
+  border: 0;
+  margin: 0; }
+  @media screen and (max-width: 480px) {
+    .flexslider {
+      /*        height:calc(100vH - 198px);*/ } }
+
+.flex-control-nav {
+  bottom: 1em; }
+  body.page .flex-control-nav {
+    display: none; }
+  .flex-control-nav.flex-control-paging li a {
+    background: rgba(255, 255, 255, 0.5) !important; }
+    .flex-control-nav.flex-control-paging li a.flex-active {
+      background: white !important; }
+
+[class*="flex-nav"] > a {
+  width: 50px !important;
+  height: 50px !important;
+  line-height: 50px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
+  font-size: 0;
+  line-height: 0; }
+  [class*="flex-nav"] > a:before {
+    content: '' !important;
+    background: rgba(255, 255, 255, 0.5) url("../svg/flex-nav.svg") no-repeat center center;
+    background-size: 25%;
+    height: 100%;
+    width: 100%; }
+  [class*="flex-nav"] > a.flex-prev {
+    top: 50%;
+    bottom: auto; }
+    @media screen and (min-width: 992px) {
+      .single [class*="flex-nav"] > a.flex-prev {
+        left: 0; }
+      [class*="subpages"] [class*="flex-nav"] > a.flex-prev {
+        left: calc(50% + 24px) !important; } }
+  @media screen and (max-width: 480px) {
+    [class*="flex-nav"] > a.flex-prev, [class*="flex-nav"] > a.flex-next {
+      top: 15%; } }
+  [class*="flex-nav"] > a.flex-prev:before {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg); }
+
+.iframe-elastic {
+  position: relative;
+  padding-bottom: 55%;
+  /* ratio width/height in % Bsp. (450 ÷ 500 = 0.9 = 90%) */
+  padding-top: 15px;
+  height: 0;
+  overflow: hidden; }
+  .iframe-elastic iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+/**** Portfolio ****/
+@media screen and (min-width: 992px) {
+  #portfolio {
+    margin: 0 -1%; } }
+
+.portfolio-item {
+  position: relative;
+  overflow: hidden; }
+  @media screen and (max-width: 480px) {
+    .portfolio-item {
+      margin-bottom: 1em; } }
+  @media screen and (min-width: 992px) {
+    .portfolio-item {
+      float: left;
+      width: 23%;
+      margin: 1%; } }
+  .portfolio-item > [class*="portfolio_"] {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: black; }
+  .portfolio-item > .portfolio_thumbnail img {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); }
+  .portfolio-item > .portfolio_content {
+    text-align: center;
+    padding: 2em;
+    z-index: 99; }
+    .portfolio-item > .portfolio_content * {
+      color: white !important; }
+    @media screen and (max-width: 480px) {
+      .portfolio-item > .portfolio_content {
+        top: 100%;
+        bottom: -100%; } }
+    @media screen and (min-width: 992px) {
+      .portfolio-item > .portfolio_content {
+        left: -100%;
+        right: 100%; } }
+    .portfolio-item > .portfolio_content h2 {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 100%; }
+    .portfolio-item > .portfolio_content svg {
+      height: 3px;
+      width: 100%;
+      margin-top: 1em;
+      margin-bottom: 1em; }
+    .portfolio-item > .portfolio_content p {
+      font-size: 1em;
+      line-height: 1.2; }
+    .portfolio-item > .portfolio_content .view-article {
+      display: none; }
+  .portfolio-item:hover, .portfolio-item:focus {
+    overflow: visible; }
+    .portfolio-item:hover > .portfolio_content, .portfolio-item:focus > .portfolio_content {
+      z-index: 999; }
+      @media screen and (min-width: 992px) {
+        .portfolio-item:hover > .portfolio_content, .portfolio-item:focus > .portfolio_content {
+          left: 100%;
+          right: calc(-109%); } }
+      @media screen and (max-width: 480px) {
+        .portfolio-item:hover > .portfolio_content, .portfolio-item:focus > .portfolio_content {
+          top: 100%;
+          bottom: calc(-100% - 1em); } }
+    .portfolio-item:hover > .portfolio_thumbnail, .portfolio-item:focus > .portfolio_thumbnail {
+      padding: 5px; }
+      .portfolio-item:hover > .portfolio_thumbnail img, .portfolio-item:focus > .portfolio_thumbnail img {
+        -webkit-filter: grayscale(0%);
+        filter: grayscale(0%); }
+  @media screen and (max-width: 480px) {
+    .portfolio-item:last-child {
+      border: 5px solid red; }
+      .portfolio-item:last-child .portfolio_content {
+        /*                top:-100%;
+                        bottom:100%;*/ } }
+  @media screen and (min-width: 992px) {
+    .portfolio-item:nth-child(4n):hover .portfolio_content {
+      left: -109%;
+      right: 100%; } }
 
 /*# sourceMappingURL=screen.css.map */
