--- a/sass/content/_media.scss
+++ b/sass/content/_media.scss
@@ -1,5 +1,6 @@
 .flexslider{
     border:0;
+    margin:0;
     @media screen and (max-width:$screen-xs){
         /*        height:calc(100vH - 198px);*/
     }
@@ -33,6 +34,11 @@
                 [class*="subpages"] & {left:calc(50% + 24px) !important;}   
             }
 
+        }
+        &.flex-prev, &.flex-next{
+            @media screen and (max-width:$screen-xs){
+                top:15%;
+            }
         }
         &.flex-prev:before{
             @include rotate(180deg);
@@ -135,6 +141,16 @@
             padding:5px;
             img {
                 @include filter(grayscale(0%));
+            }
+        }
+    }
+    @media screen and (max-width:$screen-xs){
+        &:last-child{
+            border:5px solid red;
+            .portfolio_content{
+                
+/*                top:-100%;
+                bottom:100%;*/
             }
         }
     }
