--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -13,6 +13,6 @@
 @import "base/_globals";
 @import "content/_navigation";
 @import "content/_layout";
-/*@import "content/_content";
+@import "content/_content";
 @import "content/_media";
-@import "_shame.scss";*/
+@import "_shame.scss";
